<resources>
    <string name="app_name">Room App</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="simpan">Simpan</string>
    <string name="tanggal">Tanggal</string>
    <string name="_2020_10_10">tanggal</string>
    <string name="id">ID :</string>
    <string name="pemisah">-</string>
    <string name="barang">Barang :</string>
    <string name="harga">Harga :</string>
    <string name="transaksi_pengeluaran">Transaksi Pengeluaran</string>
</resources>