<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/md_blue_400"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2020_10_10"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/id"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tanggal" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:text="@string/pemisah"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/label_id"
            app:layout_constraintTop_toTopOf="@+id/label_id" />

        <TextView
            android:id="@+id/label_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barang"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_id" />

        <TextView
            android:id="@+id/tv_nama_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:text="@string/pemisah"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/label_nama"
            app:layout_constraintStart_toEndOf="@id/label_nama"
            app:layout_constraintTop_toTopOf="@id/label_nama" />

        <TextView
            android:id="@+id/tv_label_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/harga"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_nama" />

        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pemisah"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_harga"
            app:layout_constraintStart_toEndOf="@id/tv_label_harga"
            app:layout_constraintTop_toTopOf="@id/tv_label_harga" />


        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>