<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPengeluaranActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add transaksi Pengeluaran"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <EditText
        android:id="@+id/edt_barang"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/edtxt_round"
        android:hint="@string/nama_barang"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edt_harga"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/edtxt_round"
        android:hint="@string/harga_barang"
        android:inputType="number"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_barang" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_round"
        android:text="@string/simpan"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>